--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,4 @@ before_install:
   - docker build -t shahadat0164/docker-react -f Dockerfile.dev .
 
 script:
-  - docker run -e CI=true shahadat0164/docker-react npm run test
+  - docker run -e CI=true shahadat0164/docker-react npm run test -- --coverage
